# fionn

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  justfile  release.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: bench.yml  ci.yml  clusterfuzzlite.yml  codeql.yml  fuzz.yml  pypi.yml  release.yml  scorecard.yml
benches/: causal_research.rs  comprehensive_benchmarks.rs  cross_format_ops.rs  cross_format_skip.rs  diff_benchmark.rs  diff_patch_merge_crdt.rs  dimensional_analysis.rs  dson_matrix_bench.rs  format_benchmarks.rs  gron_benchmark.rs  gron_comparison.rs  gron_optimizations.rs  memory_profile.rs  optimized_merge.rs  path_parsing.rs  path_parsing_full.rs  perf_analysis.rs  pool_zerocopy_benchmark.rs  real_world_datasets.rs  schema_selectivity.rs  schema_validation.rs  simd_jsonl_bench.rs  skip_parsing_advantage.rs  skip_selectivity_benchmark.rs  skiptape.rs  streaming_formats.rs  tape_serialization.rs  tape_source_benchmark.rs  tape_to_tape.rs
crates/fionn/: Cargo.toml
crates/fionn-cli/: Cargo.toml  README.md
crates/fionn-cli/src/: gpu_jsonl_runner.rs  lib.rs  main.rs  simd_gron.rs
crates/fionn-core/: Cargo.toml
crates/fionn-core/src/: format.rs  lib.rs  path.rs
crates/fionn-crdt/: Cargo.toml
crates/fionn-diff/: Cargo.toml
crates/fionn-diff/src/: compute.rs  diff_tape.rs  diff_zerocopy.rs  lib.rs  simd_compare.rs  tape_merge.rs  tape_patch.rs
crates/fionn-gron/: Cargo.toml
crates/fionn-gron/src/: gron_core.rs  gron_parallel.rs  gron_query.rs  gron_zerocopy.rs  lib.rs  path_builder.rs  simd_escape.rs  simd_unescape.rs  simd_utils.rs  ungron.rs
crates/fionn-ops/: Cargo.toml
crates/fionn-ops/src/: operations.rs
crates/fionn-ops/src/processor/: mod.rs
crates/fionn-pool/: Cargo.toml
crates/fionn-pool/src/: lib.rs  strategy.rs
crates/fionn-py/: Cargo.toml  README.md  pyproject.toml
crates/fionn-py/examples/dlt_demo/data/: events_nested.jsonl  profiles_a.jsonl  profiles_b.jsonl  storm_updates.jsonl
crates/fionn-simd/: Cargo.toml
crates/fionn-simd/src/: lib.rs
crates/fionn-simd/src/formats/: csv.rs  ison.rs  mod.rs  toon.rs  yaml.rs
crates/fionn-simd/src/neon/: skip.rs
crates/fionn-simd/src/skip/: arena_jsonski.rs  jsonski.rs  mod.rs
crates/fionn-simd/src/transform/: emitter.rs  metrics.rs  tape.rs
crates/fionn-simd/src/x86/: classify.rs  skip.rs
crates/fionn-stream/: Cargo.toml
crates/fionn-stream/src/: lib.rs  skiptape.rs
crates/fionn-stream/src/skiptape/: jsonl.rs  simd_ops.rs  tape.rs
crates/fionn-tape/: Cargo.toml
crates/fionn-tape/src/: lib.rs  tape_dson.rs  tape_source_impl.rs
docs/: README.md  benchmark-analysis.md  benchmark-grid.md  line-oriented-crdt.md  multi-format-dson-crdt.md  python-bindings-plan.md  query-extensions.md  schema-future-work.md  skip-parsing-analysis.md  tape-to-tape.md  transformation-matrix.md
docs/architecture/: causal-dot.md  crdt-mappings.md  delta-crdt-mappings.md  domless-processing.md  traits.md
docs/capabilities/: point-in-time.md
docs/formats/: multi-format-parsing.md
docs/performance/: benchmarks.md  optimization-guide.md  summary.md
docs/research/: comparison.md  merge-optimization.md  performance-analysis.md  skip-strategies.md
docs/research/papers/: brief.md  gron-beyond-trees.md  justfile  paper-fionn-diffpatchmerge.md  paper-fionn-gron.md  paper-full.md  paper-terascale.md  references.bib
docs/research/papers/sources/: README.md
fuzz/: Cargo.toml
fuzz/corpus/classify/: json_chunk  numbers  strings  whitespace
fuzz/corpus/formats/: csv_basic.csv  csv_quoted.csv  ison_basic.ison  ison_refs.ison  toml_basic.toml  toml_inline.toml  toon_basic.toon  toon_tabular.toon  yaml_anchors.yaml  yaml_basic.yaml
fuzz/corpus/jsonl/: array  large_array  mixed  nested  simple
fuzz/corpus/path/: array_index  deep_nested  dotted_path  mixed_path  multi_array  underscore_field  unicode_field
fuzz/corpus/tape/: escapes  mixed  nested  unicode
fuzz/fuzz_targets/: fuzz_cross_format_transform.rs  fuzz_diff_tapes.rs  fuzz_formats_libfuzzer.rs  fuzz_merge_tapes.rs  fuzz_streaming_formats.rs  fuzz_tape_libfuzzer.rs  fuzz_tape_path_resolution.rs  fuzz_tape_source.rs  fuzz_ungron.rs  fuzz_value_builders.rs
fuzz/scripts/: cross-fuzz.sh  fuzz.sh
fuzz/targets/: fuzz_classify.rs  fuzz_diff.rs  fuzz_formats.rs  fuzz_gron.rs  fuzz_jsonl.rs  fuzz_path.rs  fuzz_tape.rs
