# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "fionn-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "fionn CLI - A Swiss Army knife for JSON with SIMD acceleration"
readme = "README.md"
keywords = ["json", "simd", "gron", "diff", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "fionn_cli"
path = "src/lib.rs"

[[bin]]
name = "fionn"
path = "src/main.rs"

[[bin]]
name = "simd-gron"
path = "src/simd_gron.rs"

[[bin]]
name = "fuzz_tape"
path = "../../fuzz/targets/fuzz_tape.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "fuzz_diff"
path = "../../fuzz/targets/fuzz_diff.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "fuzz_gron"
path = "../../fuzz/targets/fuzz_gron.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "fuzz_classify"
path = "../../fuzz/targets/fuzz_classify.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "fuzz_path"
path = "../../fuzz/targets/fuzz_path.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "fuzz_jsonl"
path = "../../fuzz/targets/fuzz_jsonl.rs"
required-features = ["afl-fuzz"]

[[bin]]
name = "fuzz_formats"
path = "../../fuzz/targets/fuzz_formats.rs"
required-features = ["afl-fuzz", "all-formats"]

[features]
afl-fuzz = ["dep:afl"]
yaml = ["fionn-simd/yaml", "fionn-stream/yaml", "dep:serde_yaml"]
toml = ["fionn-simd/toml", "fionn-stream/toml", "dep:toml_crate"]
csv = ["fionn-simd/csv", "fionn-stream/csv", "dep:csv"]
ison = ["fionn-simd/ison", "fionn-stream/ison"]
toon = ["fionn-simd/toon", "fionn-stream/toon"]
all-formats = ["yaml", "toml", "csv", "ison", "toon"]

[dependencies]
fionn-core = { path = "../fionn-core", version = "0.2.0" }
fionn-tape = { path = "../fionn-tape", version = "0.2.0" }
fionn-ops = { path = "../fionn-ops", version = "0.2.0" }
fionn-stream = { path = "../fionn-stream", version = "0.2.0" }
fionn-gron = { path = "../fionn-gron", version = "0.2.0" }
fionn-diff = { path = "../fionn-diff", version = "0.2.0" }
fionn-crdt = { path = "../fionn-crdt", version = "0.2.0" }
fionn-pool = { path = "../fionn-pool", version = "0.2.0" }
fionn-simd = { path = "../fionn-simd", version = "0.2.0" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memchr = "2.7"
afl = { version = "0.15", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml_crate = { package = "toml", version = "0.8", optional = true }
csv = { version = "1.3", optional = true }

[lints]
workspace = true
