# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "fionn-diff"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON diff/patch/merge for fionn"
readme = "README.md"
keywords = ["json", "diff", "patch", "merge"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lints]
workspace = true
