# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "fionn-simd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SIMD-accelerated utilities for fionn"
readme = "README.md"
keywords = ["json", "simd", "parsing"]
categories = ["parsing", "encoding"]

[dependencies]
memchr = "2.7"
rayon = "1.10"
bumpalo = "3.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lints]
workspace = true
