# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "fionn-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Streaming JSON/JSONL processing for fionn"
readme = "README.md"
keywords = ["json", "jsonl", "streaming"]
categories = ["parsing", "encoding"]

# [features]
# gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[dependencies]
fionn-core = { path = "../fionn-core" }
fionn-tape = { path = "../fionn-tape" }
fionn-simd = { path = "../fionn-simd" }
fionn-ops = { path = "../fionn-ops" }
bumpalo = "3.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.14"
memchr = "2.7"
rayon = "1.8"
ahash = "=0.8.12"
smallvec = "1.13"
dashmap = "6.1"
wgpu = { version = "28.0.0", optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = { version = "1.15", features = ["derive"], optional = true }

[lints]
workspace = true
