# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "fionn-tape"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Tape-based JSON representation for fionn"
readme = "README.md"
keywords = ["json", "simd", "parsing", "tape"]
categories = ["parsing", "encoding"]

[dependencies]
fionn-core = { path = "../fionn-core", version = "0.1.0" }
simd-json = "0.14"
ahash = "=0.8.11"
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[lints]
workspace = true
